# chess-engine-in-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  chessengine.cpp  chessengine.h  chessgame.cpp  main.cpp
